--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -21,6 +21,9 @@
                     <textarea type="text" style="width:100%;height:80px;" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
                 </div>
                 <div class="col-xs-12">
+                    Choose category for the Roast
+                </div>
+                <div class="col-xs-12">
                     <div class="addImage">Add Image</div>
                 </div>
 
