--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -25,7 +25,7 @@
                                     <div class="col-xs-12" style="margin-bottom:15px">
                                         <div class="row">
                                             <div class="col-xs-6">
-                                                <img class="userIcon" src="../images/roastee.jpg" /><b>{{roast.name}}</b>
+                                                <img class="userIcon" src="../images/user.jpg" /><b>{{roast.name}}</b>
 
                                             </div>
                                             <div class="col-xs-6 roastTime"><p class="pull-right">11:11 PM 15 Oct 2015</p></div>
