--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -244,7 +244,7 @@ textarea.form-control.textAreaActive {
     width: 94px;
 }
 .appriNo{
-    margin-top: 5px;
+    font-size: 16px;
     padding-right: 15px;
 }
 .roastTime{
