--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -35,7 +35,7 @@
                                     <div class="col-xs-12" style="font-size:12px;
     margin-top:10px;">
                                                 <div>
-                                                    <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
+                                                    <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
                                                 </div>
                                             </div>
                                     
