--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -350,7 +350,7 @@ textarea.form-control.textAreaActive {
 /* styles for QandA page starts */
 
 .qFont{
-    font-size:22px;
+    font-size:20px;
 }
 .borderBtm{
     border-bottom:1px solid grey;
@@ -384,5 +384,27 @@ textarea.form-control.textAreaActive {
 }
 
 /* styles for QandA page ends here /*
+
+
+
+/* styles for QandA category page  /*
+
+
+
+/* styles for QandA category page ends here /*
+
+
+/* styles for QandA list page  /*
+
+
+
+/* styles for QandA list page ends here /*
+
+
+/* styles for Roast Caregory list page  /*
+
+
+
+/* styles for Roast Caregory page ends here /*
 
 /*# sourceMappingURL=style.css.map */
