--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -6,7 +6,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
-                                <p class="qFont"><b>Q.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac sem sagittis, tristique mi a, sodales nibh. ?</p>
+                                <p class="qFont"><b>Q.</b> {{questions.name}} ?</p>
                             </div>
                             <div class="col-xs-12" ng-hide="showVotes" style="margin-bottom:60px;">
                                 <div class="col-xs-5 voteBtn" ng-click="votedY()">
