--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -47,6 +47,18 @@
 	                        </div>
 	                    </div>
 	                </div>
+	                <div class="col-xs-12 trendBlock hand" ng-click="goToDebate()">
+	                    <div class="row">
+	                         <div class="col-xs-12">
+                                <p class="qFont"><b>Q.</b> {{questions.name}} ?</p>
+                            </div>
+                            <div class="col-xs-12">
+                            	<div class="voteBtn" ng-click="goToDebate()">
+                                    Vote Now
+                                </div>
+                            </div>
+	                    </div>
+	                </div>
 	            </div>
 	        </div>
 	    </div>
