--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -44,19 +44,19 @@
             <div class="row broadRow">
                 <div class="row">
                     <div class="row">
-                        <div class="col-xs-12 trendingTitle">
+                        <div class="col-xs-12 trendingTitle" style="margin-top:40px;background-color:#2ECBDE;">
                             Create a Debate
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12">
+                <div class="col-xs-12" style="margin-bottom:30px;">
                     <p><b>Enter the Debatable question</b></p>
-                    <input type="text" class="form-control" ng-model="debate.name" placeholder="Write a question you want to Debate" />
+                    <input type="text" class="form-control" ng-model="debate.question" placeholder="Write a question you want to Debate" />
                 </div>
                 <div ng-if="waiting">
                     <img src="../images/loader.gif" class="loader" />
                 </div>
-                <div class="col-xs-12">
+                <div class="col-xs-12" style="margin-bottom:60px;">
                     <button type="button" ng-click="postDebate()" class="btn btn-place-primary">Create Debate</button>
                 </div>
             </div>
