--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -8,7 +8,7 @@
 		            		Trending Roasts
 		            	</div>
 		            </div>
-	                <div class="col-xs-12 trendBlock hand" ng-click="goToRoast()" ng-repeat="trends in trending">
+	                <div class="col-xs-12 trendBlock hand" ng-click="goToRoast()" ng-repeat="trends in trending.slice().reverse()">
 	                    <div class="row">
 	                        <div class="col-xs-4">
 	                            <img src="https://yt3.ggpht.com/-QSdUl6wilzo/AAAAAAAAAAI/AAAAAAAAAAA/BGrQrNGDA8U/s900-c-k-no/photo.jpg" class="roasteeImg" />
@@ -47,13 +47,13 @@
 	                        </div>
 	                    </div>
 	                </div>
-	                <div class="col-xs-12 trendBlock hand" ng-click="goToDebate()">
-	                    <div class="row">
+	                <div class="col-xs-12 trendBlock hand" ng-repeat="question in questions.slice().reverse()">
+	                    <div class="row" ng-click="goToDebate(question)">
 	                         <div class="col-xs-12">
-                                <p class="qFont"><b>Q.</b> {{questions.name}} ?</p>
+                                <p class="qFont"><b>Q.</b> {{question.question}} ?</p>
                             </div>
                             <div class="col-xs-12">
-                            	<div class="voteBtn" ng-click="goToDebate()">
+                            	<div class="voteBtn">
                                     Vote Now
                                 </div>
                             </div>
