--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -78,7 +78,7 @@ a, .dropdown-menu {
     width: 75px;
     transition: all .5s;
     margin-left:0px;
-    box-shadow: 0px 0 200px #000;
+    box-shadow: 2px 0 40px #7D7878;
 }
 .mleft80 {
     margin-left:-80px;
