--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -2,10 +2,10 @@
 	<div class="container-fluid">
 		<div class="row">
 	        <div class="row">
-	            <div class="col-xs-12">
+	            <div class="col-xs-12" style="min-height:556px">
 	            	<div class="row">
 		            	<div class="col-xs-12 trendingTitle">
-		            		Trending Roasts
+		            		Trending Now
 		            	</div>
 		            </div>
 	                <div class="col-xs-12 trendBlock hand" ng-click="goToRoast()" ng-repeat="trends in trending.slice().reverse()">
