--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -1,83 +1,98 @@
 <div ng-controller="QandApageController">
-	<div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12" style="min-height:561px">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
-                                <p class="qFont"><b>Q.</b> {{questions.question}} ?</p>
+                                <div class="row"><p class="qFont"><b>Q.</b> {{questions.question}} ?</p></div>
                             </div>
-                            <div class="col-xs-12" ng-hide="showVotes" style="margin-bottom:60px;">
-                                <div class="col-xs-5 voteBtn" ng-click="votedY()">
-                                    Yes
-                                </div>
-                                <div class="col-xs-5 col-xs-offset-2 voteBtn" ng-click="votedN()" style="background-color:red">
-                                    No
-                                </div>
-                            </div>
-                            <div class="col-xs-12" ng-if="showVotes" style="margin-top:20px;margin-bottom:60px;">
+                            <div class="col-xs-12" ng-hide="showVoteBlock">
                                 <div class="row">
-                                    <div class="col-xs-2">
+                                    <div class="col-xs-4 col-xs-offset-8 Qbtn hand" ng-click="goToCreateQ()">
+                                        Ask new Question
+                                    </div>
+                                </div>
+                            </div>
+                            <div ng-if="showVoteBlock">
+                                <div class="col-xs-12" ng-hide="showVotes" style="margin-bottom:60px;">
+                                    <div class="col-xs-5 voteBtn" ng-click="votedY()">
                                         Yes
                                     </div>
-                                    <div class="col-xs-7 barGraph">
-                                        <div class="row">
-                                            <div class="col-xs-12 barYes" style="width:{{yRoundOff}}%">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-3">
-                                        <b>{{yRoundOff}}%</b>
-                                    </div>
-                                </div>
-                                <div class="row" style="margin-top:10px;">
-                                    <div class="col-xs-2">
+                                    <div class="col-xs-5 col-xs-offset-2 voteBtn" ng-click="votedN()" style="background-color:red">
                                         No
                                     </div>
-                                    <div class="col-xs-7 barGraph">
-                                        <div class="row">
-                                            <div class="col-xs-12 barNo" style="width:{{nRoundOff}}%;">
+                                </div>
+                                <div class="col-xs-12" ng-if="showVotes" style="margin-top:20px;margin-bottom:60px;">
+                                    <div class="row">
+                                        <div class="col-xs-2">
+                                            Yes
+                                        </div>
+                                        <div class="col-xs-7 barGraph">
+                                            <div class="row">
+                                                <div class="col-xs-12 barYes" style="width:{{yRoundOff}}%">
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="col-xs-3">
+                                            <b>{{yRoundOff}}%</b>
+                                        </div>
                                     </div>
-                                    <div class="col-xs-3">
-                                        <b>{{nRoundOff}}%</b>
+                                    <div class="row" style="margin-top:10px;">
+                                        <div class="col-xs-2">
+                                            No
+                                        </div>
+                                        <div class="col-xs-7 barGraph">
+                                            <div class="row">
+                                                <div class="col-xs-12 barNo" style="width:{{nRoundOff}}%;">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-3">
+                                            <b>{{nRoundOff}}%</b>
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:20px">
+                                        <p align="center">Total = <b>{{TotalVotes}} Votes</b></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA.slice().reverse()">
                                 <div class="row">
-                                    <div class="col-xs-12" style="margin-bottom:15px">
-                                        <div class="row">
-                                            <div class="col-xs-6">
-                                                <img class="userIcon" src="../images/user.jpg" /><b>{{qna.name}}</b>
-
-                                            </div>
-                                            <div class="col-xs-6 roastTime"><p class="pull-right">{{qna.createdOn | date:'medium'}}</p></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-12 roastText">{{qna.comment}}</div>
-                                    <div class="col-xs-12" style="font-size:12px;
-    margin-top:10px;">
-                                                <div>
-                                                    <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
+                                    <div class="row">
+                                        <div class="col-xs-12" style="margin-bottom:25px">
+                                            <div class="row">
+                                                <div class="col-xs-6">
+                                                    <img class="userIcon" src="../images/user.png" /><b>{{qna.name}}</b>
+    
                                                 </div>
+                                                <div class="col-xs-6 roastTime"><p class="pull-right">{{qna.createdOn | date:'medium'}}</p></div>
                                             </div>
-                                    
+                                        </div>
+                                        <div class="col-xs-12 roastText">{{qna.comment}}</div>
+                                        <div class="col-xs-12" style="font-size:12px;
+        margin-top:20px;">
+                                                    <div>
+                                                        <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Share</span>
+                                                        <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
+                                                    </div>
+                                                </div>
+                                        
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row"><div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                 <div class="row">
-                                    <textarea type="text" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="slam your text here"></textarea>
+                                    <textarea type="text" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer"></textarea>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12" ng-if="postBlockActive">
                                         <div class="row">
                                             <div class="col-xs-4">
-                                                <input type="checkbox" ng-click="anonyClicked(value)" value="Y" ng-model="roast.anonymous">Anonymous
+                                                <input type="checkbox" ng-click="anonyClicked(value)" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous">Anonymous
                                                 <br>
                                             </div>
                                             <div class="col-xs-8 pull-right">
