--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -45,13 +45,17 @@
                 <div class="row">
                     <div class="row">
                         <div class="col-xs-12 trendingTitle" style="margin-top:40px;background-color:#2ECBDE;">
-                            Create a Debate
+                            Ask a Question
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-12" style="margin-bottom:30px;">
                     <p><b>Enter the Debatable question</b></p>
                     <input type="text" class="form-control" ng-model="debate.question" placeholder="Write a question you want to Debate" />
+                    <div style="margin-top:20px">
+                        <input type="checkbox" ng-model="debate.debate"
+                        ng-true-value="Y" ng-false-value="N" style="margin-right:15px">I want people to <b>Vote</b> 'Yes or NO' for this Question.
+                    </div>
                 </div>
                 <div ng-if="waiting">
                     <img src="../images/loader.gif" class="loader" />
