--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -18,10 +18,7 @@
                 </div>
                 <div class="col-xs-12">
                     <p style="margin-top:10px;"><b>Describe it</b></p>
-                    <textarea type="text" style="width:100%;height:80px;" ng-model="roast.description" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
-                </div>
-                <div class="col-xs-12">
-                    Choose category for the Roast
+                    <textarea type="text" style="width:100%;height:80px;" ng-model="roast.quote" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
                 </div>
                 <div class="col-xs-12">
                     <div class="addImage">Add Image</div>
