--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -7,22 +7,22 @@
                         <div class="row">
                             <div class="row">
                             <!-- need to fix its width -->
-                            	<div class="col-xs-12 roastTitle">Roast of Hakoona Matata</div>
+                            	<div class="col-xs-12 roastTitle">Roast of {{roastTitle.name}}</div>
                             </div>
                             <div class="row">
 	                            <div class="col-xs-12 roastBanner">
 	                                <div class="col-xs-12 tpad25">
-	                                    <p class="roastQoute">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,consectetur, adipisci velit..."</p>
-	                                    <p class="pull-right">-Saumya Maurya</p>
+	                                    <p class="roastQoute">"{{roastTitle.quote}}"</p>
+	                                    <p class="pull-right">{{roastTitle.name}}</p>
 	                                </div>
 	                            </div>
 	                        </div>
                             <div class="col-xs-12 col-md-offset-1 col-lg-offset-1">
                                 <img src="http://qph.is.quoracdn.net/main-thumb-65424091-200-qfewjnaxxfuqpiqwdlmljcqfxobsefrf.jpeg" class="roastImage" />
                             </div>
-                            <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts">
+                            <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts.slice().reverse()">
                                 <div class="row">
-                                    <div class="col-xs-12" style="margin-bottom:15px">
+                                    <div class="col-xs-12" style="margin-bottom:25px">
                                         <div class="row">
                                             <div class="col-xs-6">
                                                 <img class="userIcon" src="../images/user.jpg" /><b>{{roast.name}}</b>
@@ -31,10 +31,11 @@
                                             <div class="col-xs-6 roastTime"><p class="pull-right">11:11 PM 15 Oct 2015</p></div>
                                         </div>
                                     </div>
-                                    <div class="col-xs-12 roastText">{{roast.roast}}</div>
+                                    <div class="col-xs-12 roastText">{{roast.comment}}</div>
                                     <div class="col-xs-12" style="font-size:12px;
-    margin-top:10px;">
+    margin-top:20px;">
                                                 <div>
+                                                    <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Share</span>
                                                     <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
                                                 </div>
                                             </div>
@@ -45,7 +46,7 @@
                         <div class="row"><div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                 <div class="row">
-                                    <textarea type="text" ng-model="roast.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="slam your text here"></textarea>
+                                    <textarea type="text" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="slam your text here"></textarea>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12" ng-if="postBlockActive">
@@ -56,7 +57,7 @@
                                             </div>
                                             <div class="col-xs-8 pull-right">
                                                 <button type="btn" ng-click="hideTextArea()" class="btn btn-default">Cancel</button>
-                                                <button type="btn" class="btn btn-default">Post</button>
+                                                <button type="btn" class="btn btn-default" ng-click="postRComment()">Post</button>
                                             </div>
                                         </div>
                                     </div>
