--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -166,7 +166,7 @@ a, .dropdown-menu {
     margin-top: 20px;
     height: 160px;
     color:#fff;
-    background: url("http://www.f-covers.com/cover/fiery-drinks-facebook-cover-timeline-banner-for-fb.jpg") no-repeat center center fixed;
+    background: url("/../../images/roastBG.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -179,14 +179,18 @@ a, .dropdown-menu {
     position: fixed;
     z-index: 10;
 }
-.tpad25 {
-    padding-top: 25px;
+.tpad20 {
+    padding-top: 20px;
+}
+.tpad10 {
+    padding-top: 10px;
 }
 .roastImage {
     width: 100px;
     height: 100px;
     border-radius: 50px;
     margin-top: -50px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 .userIcon {
     height:45px;
@@ -261,12 +265,28 @@ textarea.form-control.textAreaActive {
 .roastText{
   font-size: 17px;
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1200px) {
     textarea.form-control {
-        width: 52.33%;
+        width: 46.1%;
     }
     .roastTitle {
-        width: 52.33%;
+        width: 46.1%;
+    }
+}
+@media screen and (max-width: 1200px) {
+    textarea.form-control {
+        width: 53.1%;
+    }
+    .roastTitle {
+        width: 53.1%;
+    }
+}
+@media screen and (max-width: 998px) {
+    textarea.form-control {
+        width: 100%;
+    }
+    .roastTitle {
+        width: 100%;
     }
 }
 /* repair the roast Title bar
