--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -11,35 +11,36 @@
                             </div>
                             <div class="row">
 	                            <div class="col-xs-12 roastBanner">
-	                                <div class="col-xs-12 tpad25">
+	                                <div class="col-xs-12 tpad20">
 	                                    <p class="roastQoute">"{{roastTitle.quote}}"</p>
 	                                    <p class="pull-right">{{roastTitle.name}}</p>
 	                                </div>
 	                            </div>
 	                        </div>
-                            <div class="col-xs-12 col-md-offset-1 col-lg-offset-1">
+                            <div class="col-xs-12 col-md-offset-1 col-lg-offset-1" style="margin-bottom:35px">
                                 <img src="http://qph.is.quoracdn.net/main-thumb-65424091-200-qfewjnaxxfuqpiqwdlmljcqfxobsefrf.jpeg" class="roastImage" />
                             </div>
-                            <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts.slice().reverse()">
-                                <div class="row">
-                                    <div class="col-xs-12" style="margin-bottom:25px">
-                                        <div class="row">
-                                            <div class="col-xs-6">
-                                                <img class="userIcon" src="../images/user.jpg" /><b>{{roast.name}}</b>
+                            <div class="row">
+                                <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts.slice().reverse()">
+                                    <div class="row">
+                                        <div class="col-xs-12" style="margin-bottom:25px">
+                                            <div class="row">
+                                                <div class="col-xs-6">
+                                                    <img class="userIcon" src="../images/user.jpg" /><b>{{roast.name}}</b>
 
-                                            </div>
-                                            <div class="col-xs-6 roastTime"><p class="pull-right">11:11 PM 15 Oct 2015</p></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-12 roastText">{{roast.comment}}</div>
-                                    <div class="col-xs-12" style="font-size:12px;
-    margin-top:20px;">
-                                                <div>
-                                                    <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Share</span>
-                                                    <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
                                                 </div>
+                                                <div class="col-xs-6 roastTime"><p class="pull-right">11:11 PM 15 Oct 2015</p></div>
                                             </div>
-                                    
+                                        </div>
+                                        <div class="col-xs-12 roastText">{{roast.comment}}</div>
+                                        <div class="col-xs-12" style="font-size:12px;
+        margin-top:20px;">
+                                            <div>
+                                                <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Share</span>
+                                                <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right"><i class="glyphicon glyphicon-thumbs-up"></i>123</span>
+                                            </div>
+                                        </div> 
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -67,5 +68,6 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
