--- a/client/views/QandAlist.html
+++ b/client/views/QandAlist.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="row">
 		        <div class="col-xs-12 trendingTitle">
-		      		Trending Now
+		      		Recent Questions
           		</div>
           	</div>
 			<div class="col-xs-12 trendBlock hand" ng-repeat="question in questions.slice().reverse()">
