--- a/client/views/roastList.html
+++ b/client/views/roastList.html
@@ -11,7 +11,7 @@
 	                <div class="col-xs-12 trendBlock hand" ng-repeat="content in roastList.slice().reverse()">
 	                    <div class="row" ng-click="goToRoast(content)">
 	                        <div class="col-xs-4">
-	                            <img src="https://yt3.ggpht.com/-QSdUl6wilzo/AAAAAAAAAAI/AAAAAAAAAAA/BGrQrNGDA8U/s900-c-k-no/photo.jpg" class="roasteeImg" />
+	                            <img src="http://qph.is.quoracdn.net/main-thumb-65424091-200-qfewjnaxxfuqpiqwdlmljcqfxobsefrf.jpeg" class="roasteeImg" />
 	                        </div>
 	                        <div class="col-xs-8">
 	                            <div class="row">
