--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -9,6 +9,10 @@ a, .dropdown-menu {
   -webkit-transition: all 0.3s;
   transition: all 0.3s; }
 
+  .ngViewBG{
+    background-color: #f1f1f1;
+  }
+
   .btn-place-primary {
             background-color: #009688;
             border-radius: 2px;
@@ -28,7 +32,8 @@ a, .dropdown-menu {
 
 .titleRoast{
     font-size: 22px;
-    margin-top: 7px;
+    margin-top: -3px;
+    margin-left: -20px;
 }
 
 .loader{
@@ -60,7 +65,7 @@ a, .dropdown-menu {
 .menuCollapseGlyph {
     margin-top: 10px;
     font-size: 25px;
-    margin-left: -8px;
+    margin-left: -20px;
 }
 .tMar50 {
     margin-top: 50px;
@@ -156,6 +161,12 @@ a, .dropdown-menu {
         margin-left: 15px;
         margin-right: 15px;
     }
+    .ngViewBG{
+        background-color: #fff;
+    }
+    .titleRoast{
+        margin-left: 155px;
+    }
 
 }
 /* Left Nav Bar CSS End */
@@ -190,7 +201,7 @@ a, .dropdown-menu {
     height: 100px;
     border-radius: 50px;
     margin-top: -50px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    box-shadow: 0 3px 5px 1px #999;
 }
 .userIcon {
     height:45px;
@@ -306,12 +317,15 @@ textarea.form-control.textAreaActive {
     width: 80px;
     height: 80px;
     border-radius: 50px;
+    box-shadow: 0 3px 5px 1px #999;
+    display: block;
+    margin: auto;
 }
 .trendBlock{
-    border-bottom: 1px solid gainsboro;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     margin-bottom: 15px;
     padding-bottom: 15px;
-    background-color: #F1F1F1;
+    background-color: #fff;
     padding-top: 30px;
 }
 .trendingTitle{
@@ -334,6 +348,9 @@ textarea.form-control.textAreaActive {
       display: block;
       margin-left: auto;
       margin-right: auto;
+    }
+    .trendBlock{
+        background-color: #f1f1f1;
     }
 }
 @media screen and (max-width: 992px) {
@@ -394,8 +411,8 @@ textarea.form-control.textAreaActive {
     border: 1px solid gainsboro;
     margin-top: 15px;
     margin-bottom: 25px;
-    height: 45px;
-    padding-top: 6px;
+    min-height: 45px;
+    padding-top: 10px;
     color: #fff;
     background-color: #009688;
     border-radius: 4px;
@@ -415,12 +432,19 @@ textarea.form-control.textAreaActive {
     height : 20px;
     background-color : red;
 }
+.mTop0{
+    margin-top: 0px;
+}
 @media screen and (min-width: 992px) {
     .qFont{
         font-size:26px;
     }
     .Qbtn{
-        font-size: 20px
+        font-size: 20px;
+        padding-top: 7px;
+    }
+    .mLeft48{
+        margin-left: -48px;
     }
 }
 
