--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -1,6 +1,6 @@
 <div ng-controller="QandApageController">
     <div class="container-fluid">
-        <div class="row">
+        <div class="row"><div class="row" style="background-color:#fff"><div class="col-xs-12">
             <div class="col-xs-12" style="min-height:561px">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -10,7 +10,7 @@
                             </div>
                             <div class="col-xs-12" ng-hide="showVoteBlock">
                                 <div class="row">
-                                    <div class="col-xs-4 col-xs-offset-8 Qbtn hand" ng-click="goToCreateQ()">
+                                    <div class="col-xs-5 col-xs-offset-7 Qbtn hand" ng-click="goToCreateQ()">
                                         Ask new Question
                                     </div>
                                 </div>
@@ -75,7 +75,7 @@
         margin-top:20px;">
                                                     <div>
                                                         <span class="pull-left replyBtn">Reply</span><span class="pull-left replyBtn">Share</span>
-                                                        <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(roast)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
+                                                        <div class="appreciateBtn hand pull-right" ng-class="appreciated?'appreciatedBtn':'appreciateBtn'" ng-click="appreciate(qna)">{{appriValue}}</div><span class="appriNo pull-right">123</span>
                                                     </div>
                                                 </div>
                                         
@@ -83,29 +83,38 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row"><div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
-                                <div class="row">
-                                    <textarea type="text" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer"></textarea>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-12" ng-if="postBlockActive">
-                                        <div class="row">
-                                            <div class="col-xs-4">
-                                                <input type="checkbox" ng-click="anonyClicked(value)" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous">Anonymous
-                                                <br>
-                                            </div>
-                                            <div class="col-xs-8 pull-right">
-                                                <button type="btn" ng-click="hideTextArea()" class="btn btn-default">Cancel</button>
-                                                <button type="btn" class="btn btn-default" ng-click="post()">Post</button>
+                        <div class="row">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
+                                    <div class="row">
+                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer"></textarea>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12" ng-if="postBlockActive">
+                                            <div class="row" style="margin-bottom: 15px;">
+                                                <div class="col-xs-12">
+                                                    <div class="col-xs-12 col-sm-10 col-md-6 col-lg-6 mLeft48">
+                                                        <p class="pull-right mTop0" style="color:grey">{{qCommentChar}} words left</p>
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-4">
+                                                    <input type="checkbox" ng-click="anonyClicked(value)" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous">Anonymous
+                                                    <br>
+                                                </div>
+                                                <div class="col-xs-8">
+                                                    <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
+                                                        <button type="btn" style="background-color:#009688;color:#fff" class="btn btn-default pull-right" ng-click="post()">Post</button>
+                                                        <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 </div>
