--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -1,65 +1,53 @@
 <div ng-controller="roastCreateController">
     <div class="container-fluid">
         <div class="row" style="height:450px">
-            <div class="row broadRow">
-                <div class="row">
+            <div class="row">
+                <div class="col-xs-12" style="min-height:556px">
                     <div class="row">
                         <div class="col-xs-12 trendingTitle">
-                            Create a Roast
+                            Create Roast
                         </div>
                     </div>
-                </div>
-                <div class="col-xs-12">
-                    <p><b>Name of the Roastee</b></p>
-                    <input type="text" class="form-control" ng-model="roast.name" placeholder="Name of the person/thing you want to Roast" />
-                </div>
-                <div ng-if="waiting">
-                    <img src="../images/loader.gif" class="loader" />
-                </div>
-                <div class="col-xs-12">
-                    <p style="margin-top:10px;"><b>Describe it</b></p>
-                    <textarea type="text" style="width:100%;height:80px;" ng-model="roast.quote" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
-                </div>
-                <div class="col-xs-12">
-                    <div class="addImage">Add Image</div>
-                </div>
-
-                <!-- commented for image upload -->
-               <!--  <div>
-                    <label for="inputImage">Image</label>
-                    
-                    <input id="inputImage" type="file" accept="image/*" image="image" />
-                    
-                    <img ng-show="image" ng-src="{{image.url}}" type="{{image.file.type}}"/> 
-                    <button type="submit" ng-click="single(image)" disabled>Add</button>
-                    <button type="reset">Clear</button>
-                </div> -->
-                <div class="col-xs-12">
-                    <button type="button" ng-click="postRoast()" class="btn btn-place-primary">Create Roast</button>
-                </div>
-            </div>
-            <div class="row broadRow">
-                <div class="row">
+                    <div class="col-xs-12">
+                        <p><b>Name of the Roastee</b></p>
+                        <input type="text" my-maxlength="50" class="form-control" ng-trim="false" ng-model="roast.name" placeholder="Name of the person/thing you want to Roast" />
+                        <p class="pull-right mTop0" style="color:grey">{{nameChar}} words left</p>
+                    </div>
+                    <div ng-if="waiting">
+                        <img src="../images/loader.gif" class="loader" />
+                    </div>
+                    <div class="col-xs-12">
+                        <p style="margin-top:10px;"><b>Describe it</b></p>
+                        <textarea type="text" style="width:100%;height:80px;" ng-trim="false" my-maxlength="150" ng-model="roast.quote" class="form-control" placeholder="Describe the person/thing you want to Roast in the most Sarcastic way"></textarea>
+                        <p class="pull-right mTop0" style="color:grey">{{descChar}} words left</p>
+                    </div>
+                    <div class="col-xs-12">
+                        <div class="addImage">Add Image</div>
+                    </div>
+                    <div class="col-xs-12">
+                        <button type="button" ng-click="postRoast()" class="btn btn-place-primary">Create Roast</button>
+                    </div>
                     <div class="row">
                         <div class="col-xs-12 trendingTitle" style="margin-top:40px;background-color:#2ECBDE;">
                             Ask a Question
                         </div>
                     </div>
-                </div>
-                <div class="col-xs-12" style="margin-bottom:30px;">
-                    <p><b>Enter the Debatable question</b></p>
-                    <input type="text" class="form-control" ng-model="debate.question" placeholder="Write a question you want to Debate" />
-                    <div style="margin-top:20px">
-                        <input type="checkbox" ng-model="debate.debate"
-                        ng-true-value="Y" ng-false-value="N" style="margin-right:15px">I want people to <b>Vote</b> 'Yes or NO' for this Question.
+                    <div class="col-xs-12" style="margin-bottom:30px;">
+                        <p><b>Enter the Debatable question</b></p>
+                        <input type="text" class="form-control" my-maxlength="150" ng-trim="false" ng-model="debate.question" placeholder="Write a question you want to Debate" />
+                        <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{qChar}} words left</p>
+                        <div style="margin-top:30px">
+                            <input type="checkbox" ng-model="debate.debate"
+                            ng-true-value="Y" ng-false-value="N" style="margin-right:15px">I want people to <b>Vote</b> 'Yes or NO' for this Question.
+                        </div>
                     </div>
-                </div>
-                <div ng-if="waiting">
-                    <img src="../images/loader.gif" class="loader" />
-                </div>
-                <div class="col-xs-12" style="margin-bottom:60px;">
-                    <button type="button" ng-click="postDebate()" class="btn btn-place-primary">Create Debate</button>
-                </div>
+                    <div ng-if="waiting">
+                        <img src="../images/loader.gif" class="loader" />
+                    </div>
+                    <div class="col-xs-12" style="margin-bottom:60px;">
+                        <button type="button" ng-click="postDebate()" class="btn btn-place-primary">Create Debate</button>
+                    </div>
+               </div>
             </div>
         </div>
     </div>
