--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -20,7 +20,7 @@
                             <div class="col-xs-12 col-md-offset-1 col-lg-offset-1" style="margin-bottom:35px">
                                 <img src="http://qph.is.quoracdn.net/main-thumb-65424091-200-qfewjnaxxfuqpiqwdlmljcqfxobsefrf.jpeg" class="roastImage" />
                             </div>
-                            <div class="row">
+                            <div class="row" style="background-color:#fff">
                                 <div class="col-xs-12 roastDiv" ng-repeat="roast in roasts.slice().reverse()">
                                     <div class="row">
                                         <div class="col-xs-12" style="margin-bottom:25px">
@@ -47,22 +47,29 @@
                         <div class="row"><div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                 <div class="row">
-                                    <textarea type="text" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="slam your text here"></textarea>
+                                    <textarea type="text" my-maxlength="2000" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="slam your text here"></textarea>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12" ng-if="postBlockActive">
-                                        <div class="row">
+                                        <div class="row" style="margin-bottom: 15px;">
+                                            <div class="col-xs-12">
+                                                <div class="col-xs-12 col-sm-10 col-md-6 col-lg-6 mLeft48">
+                                                    <p class="pull-right mTop0" style="color:grey">{{rCommentChar}} words left</p>
+                                                </div>
+                                            </div>
                                             <div class="col-xs-4">
-                                                <input type="checkbox" ng-click="anonyClicked(value)" value="Y" ng-model="roast.anonymous">Anonymous
+                                                <input type="checkbox" ng-click="anonyClicked(value)" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous">Anonymous
                                                 <br>
                                             </div>
-                                            <div class="col-xs-8 pull-right">
-                                                <button type="btn" ng-click="hideTextArea()" class="btn btn-default">Cancel</button>
-                                                <button type="btn" class="btn btn-default" ng-click="postRComment()">Post</button>
+                                            <div class="col-xs-8">
+                                                <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
+                                                    <button type="btn" style="background-color:#009688;color:#fff" class="btn btn-default pull-right" ng-click="postRComment()">Post</button>
+                                                    <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                     </div>
                 </div>
