google auth button

--- a/client/views/roastList.html
+++ b/client/views/roastList.html
@@ -47,6 +47,7 @@
 	                        </div>
 	                    </div>
 	                </div>
+	                <a href="/auth/google/callback" class="btn btn-danger">Google</a>
 	            </div>
 	        </div>
 		</div>
