--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -87,7 +87,7 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                     <div class="row">
-                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer"></textarea>
+                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer anonymously"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12" ng-if="postBlockActive">
