--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -47,7 +47,7 @@
                         <div class="row"><div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                 <div class="row">
-                                    <textarea type="text" my-maxlength="2000" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="slam your text here"></textarea>
+                                    <textarea type="text" my-maxlength="2000" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your text here anonymously"></textarea>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12" ng-if="postBlockActive">
