--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -29,7 +29,7 @@
                                                     <img class="userIcon" src="../images/user.jpg" /><b>{{roast.name}}</b>
 
                                                 </div>
-                                                <div class="col-xs-6 roastTime"><p class="pull-right">11:11 PM 15 Oct 2015</p></div>
+                                                <div class="col-xs-6 roastTime"><p class="pull-right">{{roast.createdOn}}</p></div>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 roastText">{{roast.comment}}</div>
