--- a/client/views/roastTrending.html
+++ b/client/views/roastTrending.html
@@ -8,6 +8,9 @@
 		            		Trending Now
 		            	</div>
 		            </div>
+		            <!-- <body ng-controller="Ctrl">
+    <button ng-click="$storage.x = $storage.x + 1">{{$storage.x}}</button> + <button ng-click="$storage.y = $storage.y + 1">{{$storage.y}}</button> = {{$storage.x + $storage.y}}
+  </body> -->
 	                <div class="col-xs-12 trendBlock hand" ng-click="goToRoast()" ng-repeat="trends in trending.slice().reverse()">
 	                    <div class="row">
 	                        <div class="col-xs-4">
