--- a/client/appResources/styles/style.css
+++ b/client/appResources/styles/style.css
@@ -287,6 +287,8 @@ textarea.form-control.textAreaActive {
     font-size: 11px;
     margin-top: 4px;
     color: #988E8E;
+    margin-left: 50px;
+    margin-top: -15px;
 }
 .roastText{
   font-size: 17px;
