--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -61,13 +61,12 @@
                             <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA.slice().reverse()">
                                 <div class="row">
                                     <div class="row">
-                                        <div class="col-xs-12" style="margin-bottom:25px">
+                                        <div class="col-xs-12" style="margin-bottom:10px">
                                             <div class="row">
-                                                <div class="col-xs-6">
-                                                    <img class="userIcon" src="../images/user.png" /><b>{{qna.name}}</b>
-    
+                                                <div class="col-xs-12">
+                                                    <img class="userIcon" src="{{qna.imgUrl}}" /><b>{{qna.name}}</b>
+                                                    <p class="roastTime">{{qna.createdOn | date:'d MMM h:m a'}}</p>
                                                 </div>
-                                                <div class="col-xs-6 roastTime"><p class="pull-right">{{qna.createdOn | date:'medium'}}</p></div>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 roastText">{{qna.comment}}</div>
