--- a/client/views/roastList.html
+++ b/client/views/roastList.html
@@ -1,4 +1,4 @@
-<div ng-controller="roastListController">
+<div>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="row">
@@ -23,7 +23,7 @@
 	                                        <strong>-{{content.name}}</strong>
 	                                    </p>
 	                                </div>
-	                                <div class="col-xs-12 rpmText">
+	                                <!-- <div class="col-xs-12 rpmText">
 	                                	<div class="row">
 		                                    <div class="col-xs-6 hidden-xs">
 		                                    	Total Roasts: 
@@ -42,12 +42,11 @@
 		                                    	<b style="font-size:18px;">{{content.rpm}}</b>
 		                                   	</div>
 		                                </div>
-	                                </div>
+	                                </div> -->
 	                            </div>
 	                        </div>
 	                    </div>
 	                </div>
-	                <a href="/auth/google/callback" class="btn btn-danger">Google</a>
 	            </div>
 	        </div>
 		</div>
