--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -1,4 +1,4 @@
-<div ng-controller="QandApageController">
+<div>
     <div class="container-fluid">
         <div class="row"><div class="row" style="background-color:#fff"><div class="col-xs-12">
             <div class="col-xs-12" style="min-height:561px">
@@ -6,7 +6,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <div class="row">
                             <div class="col-xs-12 borderBtm">
-                                <div class="row"><p class="qFont"><b>Q.</b> {{questions.question}} ?</p></div>
+                                <div class="row"><p class="titleQ"><b>Q.</b> {{questions.question}} ?</p></div>
                             </div>
                             <div class="col-xs-12" ng-hide="showVoteBlock">
                                 <div class="row">
@@ -53,12 +53,26 @@
                                             <b>{{nRoundOff}}%</b>
                                         </div>
                                     </div>
-                                    <div class="row" style="margin-top:20px">
+                                    <div class="row" style="margin-top:20px;border-bottom:1px solid gainsboro">
                                         <p align="center">Total = <b>{{TotalVotes}} Votes</b></p>
+                                    </div>
+                                    <div class="col-xs-12" style="margin-top:-10px">
+                                        <p class="pull-right">
+                                            <img class="hand" social-facebook src="../images/facebook.png"/>
+                                            <img class="hand" social-twitter src="../images/twitter.png"/>
+                                            <img class="hand" social-gplus src="../images/googleplus.png"/>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA.slice().reverse()">
+                            <div class="col-xs-12" ng-hide="showVotes" style="margin-top:-20px">
+                                <p class="pull-right">
+                                    <img class="hand" social-facebook src="../images/facebook.png"/>
+                                    <img class="hand" social-twitter src="../images/twitter.png"/>
+                                    <img class="hand" social-gplus src="../images/googleplus.png"/>
+                                </p>
+                            </div>
+                            <div class="col-xs-12 roastDiv" ng-repeat="qna in QandA.slice().reverse() track by $index">
                                 <div class="row">
                                     <div class="row">
                                         <div class="col-xs-12" style="margin-bottom:10px">
@@ -102,7 +116,7 @@
                                                 </div>
                                                 <div class="col-xs-8">
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff" class="btn btn-default pull-right" ng-click="post()">Post</button>
+                                                        <button type="btn" style="background-color:#009688;color:#fff" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
                                                 </div>
