--- a/client/views/404.html
+++ b/client/views/404.html
@@ -3,7 +3,7 @@
 		height: 330px;
 	}
 </style>
-<div ng-controller="errorController">
+<div ng-controller="errorController" style="background-color:#fff">
     <div class="container-fluid height">
         <div class="row" style="margin-top:50px">
             <div class="col-xs-7 col-lg-4">
