--- a/client/views/QandApage.html
+++ b/client/views/QandApage.html
@@ -100,7 +100,7 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                     <div class="row">
-                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer anonymously"></textarea>
+                                        <textarea type="text" my-maxlength="2000" ng-trim="false" ng-model="comment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your Answer"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-xs-12" ng-if="postBlockActive">
@@ -111,14 +111,17 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-xs-4">
-                                                    <input type="checkbox" ng-click="anonyClicked(value)" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous">Anonymous
+                                                    <input type="checkbox" ng-click="anonyClicked(value)" ng-checked="true" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous" ng-disabled="true">Anonymous
                                                     <br>
                                                 </div>
                                                 <div class="col-xs-8">
                                                     <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                        <button type="btn" style="background-color:#009688;color:#fff" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
+                                                        <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="post()" ng-disabled="btnDisable">Post</button>
                                                         <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                                     </div>
+                                                </div>
+                                                <div class="col-xs-12">
+                                                        <p><b>Note</b>: Your comment will be posted anonymously if you are not Logged In</p>
                                                 </div>
                                             </div>
                                         </div>
