--- a/client/views/roastCreate.html
+++ b/client/views/roastCreate.html
@@ -1,5 +1,5 @@
 <div ng-controller="roastCreateController">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color:#fff">
         <div class="row" style="height:450px">
             <div class="row">
                 <div class="col-xs-12" style="min-height:556px">
@@ -51,12 +51,12 @@
                         </div>
                     </div>
                     <div class="col-xs-12" style="margin-bottom:30px;">
-                        <p><b>Enter the Debatable question</b></p>
-                        <input type="text" class="form-control" my-maxlength="150" ng-trim="false" ng-model="debate.question" placeholder="Write a question you want to Debate" />
+                        <p><b>Write Your Question</b></p>
+                        <input type="text" class="form-control" my-maxlength="150" ng-trim="false" ng-model="debate.question" placeholder="Write your question" />
                         <p class="pull-right mTop0" style="color:grey;margin-bottom:10px;">{{qChar}} words left</p>
                         <div style="margin-top:30px">
                             <input type="checkbox" ng-model="debate.debate"
-                            ng-true-value="Y" ng-false-value="N" style="margin-right:15px">I want people to <b>Vote</b> 'Yes or NO' for this Question.
+                            ng-true-value="Y" ng-false-value="N" style="margin-right:15px">I want people to <b>Vote</b>for this Question.
                         </div>
                     </div>
                     <div ng-if="waiting">
