--- a/client/views/roastPage.html
+++ b/client/views/roastPage.html
@@ -20,7 +20,7 @@
                             <div class="col-xs-12 col-md-offset-1 col-lg-offset-1" style="margin-bottom:35px">
                                 <img src="http://qph.is.quoracdn.net/main-thumb-65424091-200-qfewjnaxxfuqpiqwdlmljcqfxobsefrf.jpeg" class="roastImage" />
                             </div>
-                            <div class="col-xs-12">
+                            <div class="col-xs-12" style="margin-top:-30px;">
                                 <p class="pull-right">
                                     <img class="hand" social-facebook src="../images/facebook.png"/>
                                     <img class="hand" social-twitter src="../images/twitter.png"/>
@@ -53,7 +53,7 @@
                         <div class="row"><div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 fixedTextBox">
                                 <div class="row">
-                                    <textarea type="text" my-maxlength="2000" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your text here anonymously"></textarea>
+                                    <textarea type="text" my-maxlength="2000" ng-model="rComment.comment" ng-focus="showTextArea()" ng-class="postBlockActive?'textAreaActive':'textAreaBox'" class="form-control textAreaBox" placeholder="Write your text here"></textarea>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12" ng-if="postBlockActive">
@@ -64,14 +64,17 @@
                                                 </div>
                                             </div>
                                             <div class="col-xs-4">
-                                                <input type="checkbox" ng-click="anonyClicked(value)" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous">Anonymous
+                                                <input type="checkbox" ng-click="anonyClicked(value)" ng-checked="true" ng-true-value="Y" ng-false-value="N" ng-model="roast.anonymous" ng-disabled="true">Anonymous
                                                 <br>
                                             </div>
                                             <div class="col-xs-8">
                                                 <div class="col-xs-12 col-sm-10 col-md-4 col-lg-3 mLeft48">
-                                                    <button type="btn" style="background-color:#009688;color:#fff" class="btn btn-default pull-right" ng-click="postRComment()" ng-disabled="btnDisable">Post</button>
+                                                    <button type="btn" style="background-color:#009688;color:#fff;width:90px;" class="btn btn-default pull-right" ng-click="postRComment()" ng-disabled="btnDisable">Post</button>
                                                     <button type="btn" style="margin-right:10px" ng-click="hideTextArea()" class="btn btn-default pull-right">Cancel</button>
                                             </div>
+                                        </div>
+                                         <div class="col-xs-12">
+                                                <p><b>Note</b>: Your comment will be posted anonymously if you are not Logged In</p>
                                         </div>
                                     </div>
                                 </div>
